installed and used $auth module with $axios module

--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
   },
   "dependencies": {
     "@mdi/font": "^5.0.45",
+    "@nuxtjs/auth": "^4.9.0",
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/dotenv": "^1.4.0",
     "@nuxtjs/pwa": "^3.0.0-0",
     "apexcharts": "^3.18.1",
     "nuxt": "^2.0.0",
     "vue-apexcharts": "^1.5.3",
-    "vue-number-animation": "^1.0.5"
+    "vue-number-animation": "^1.0.5",
+    "vuex-map-fields": "^1.4.0"
   },
   "devDependencies": {
     "@nuxtjs/vuetify": "^1.0.0"
