--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@nuxtjs/dotenv": "^1.4.0",
     "@nuxtjs/pwa": "^3.0.0-0",
     "apexcharts": "^3.18.1",
+    "chart.js": "^2.9.3",
     "nuxt": "^2.0.0",
     "vue-apexcharts": "^1.5.3",
+    "vue-chartjs": "^3.5.0",
     "vue-number-animation": "^1.0.5",
     "vuex-map-fields": "^1.4.0"
   },
