--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "@nuxtjs/pwa": "^3.0.0-0",
     "apexcharts": "^3.18.1",
     "chart.js": "^2.9.3",
+    "leaflet": "^1.6.0",
     "nuxt": "^2.0.0",
     "vue-apexcharts": "^1.5.3",
     "vue-chartjs": "^3.5.0",
     "vue-number-animation": "^1.0.5",
+    "vue2-leaflet": "^2.5.2",
     "vuex-map-fields": "^1.4.0"
   },
   "devDependencies": {
