--- a/api/composer.json
+++ b/api/composer.json
@@ -11,6 +11,7 @@
         "php": "^7.2",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.2",
+        "laravel/passport": "^8.4",
         "laravel/tinker": "^2.0",
         "spatie/laravel-cors": "^1.6",
         "spatie/laravel-permission": "^3.11"
