--- a/api/composer.json
+++ b/api/composer.json
@@ -14,7 +14,9 @@
         "laravel/framework": "^6.2",
         "laravel/passport": "^8.4",
         "laravel/tinker": "^2.0",
+        "spatie/laravel-activitylog": "^3.14",
         "spatie/laravel-cors": "^1.6",
+        "spatie/laravel-medialibrary": "^7.0.0",
         "spatie/laravel-permission": "^3.11"
     },
     "require-dev": {
