--- a/api/composer.json
+++ b/api/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.2",
+        "askedio/laravel-soft-cascade": "^6.0",
         "fideloper/proxy": "^4.0",
         "joshrainwater/active-users": "^2.0",
         "lab404/laravel-impersonate": "^1.6",
