--- a/web/package.json
+++ b/web/package.json
@@ -20,8 +20,10 @@
     "@nuxtjs/pwa": "^3.0.0-0",
     "apexcharts": "^3.18.1",
     "chart.js": "^2.9.3",
+    "export-to-csv": "^0.2.1",
     "leaflet": "^1.6.0",
     "nuxt": "^2.0.0",
+    "pdfkit": "^0.11.0",
     "vue-apexcharts": "^1.5.3",
     "vue-chartjs": "^3.5.0",
     "vue-number-animation": "^1.0.5",
